# graphlit-expansion

./: .env.example  .gitignore  CLAUDE.md  README.md  prompt.md  pyproject.toml  verify_graph.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  Master Prompt.md  README.md  architechture.md  backfill_citations.py  check_communities.py  check_community_513.py  community_report.md  full_stats.py  pyproject.toml  quick_check.py  ranked_papers.csv  run_community_detection.py
backend/data/: seeds.json
backend/scripts/: diagnose_missing_impact_scores.py  extract_docx_text.py  extract_pdf_pptx_text.py
backend/src/graphlit/: __main__.py  config.py  models.py
backend/src/graphlit/analytics/: __init__.py  community_detector.py  impact_scorer.py
backend/src/graphlit/api/: __init__.py  dependencies.py  main.py
backend/src/graphlit/api/routes/: __init__.py  admin.py  recommendations.py
backend/src/graphlit/cache/: __init__.py  memory_cache.py  redis_cache.py
backend/src/graphlit/clients/: openalex.py
backend/src/graphlit/database/: __init__.py  graph_algorithms.py  neo4j_client.py  queries.py
backend/src/graphlit/monitoring/: __init__.py  profiler.py
backend/src/graphlit/pipeline/: __init__.py  mapper.py  orchestrator.py
backend/src/graphlit/recommendations/: __init__.py  collaborative_filter.py  content_based.py  similarity.py
backend/src/graphlit/utils/: logging.py  retry.py
backend/tests/: conftest.py  test_config.py  test_mapper.py
backend/tests/api/: test_personalized_feed.py
frontend/: README.md  biome.json  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: apple-icon.tsx  error.tsx  globals.css  icon.tsx  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/communities/: CommunitiesClient.tsx  page.tsx
frontend/src/app/communities/[id]/: CommunityDetailClient.tsx  page.tsx
frontend/src/app/feed/: FeedClient.tsx  page.tsx
frontend/src/app/paper/[id]/: PaperDetailClient.tsx  page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/charts/: CitationTrendChart.tsx  ImpactScoreChart.tsx  TopicDistribution.tsx
frontend/src/components/community/: BridgingPapers.tsx  CommunityCard.tsx  CommunityGraph.tsx  YearFilterToggle.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx  SessionManager.tsx
frontend/src/components/paper/: CitationGraph.tsx  PaperCard.tsx  PaperCardSkeleton.tsx  SimilarityBreakdown.tsx  TopicBadges.tsx
frontend/src/components/providers/: QueryProvider.tsx
frontend/src/components/search/: AdvancedFilters.tsx  EmptyState.tsx  SearchBar.tsx  SearchPageContent.tsx
frontend/src/components/ui/: slider.tsx
frontend/src/lib/: constants.ts
frontend/src/lib/api/: admin.ts  client.ts  communities.ts  papers.ts  recommendations.ts
frontend/src/lib/hooks/: useCommunities.ts  usePapers.ts  useRecommendations.ts  useStats.ts
frontend/src/lib/utils/: formatters.ts  session.ts  validators.ts
src/graphlit/: __init__.py  __main__.py  config.py  models.py
src/graphlit/clients/: __init__.py  openalex.py
src/graphlit/database/: queries.py
src/graphlit/pipeline/: orchestrator.py
src/graphlit/utils/: __init__.py  retry.py
tests/: __init__.py  conftest.py  test_config.py  test_mapper.py  test_models.py  test_openalex.py
