[project]
name = "graphlit-expansion"
version = "1.0.0"
description = "Academic citation network expansion system using OpenAlex API and Neo4j"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "GraphLit Team"}
]
keywords = ["academic", "citation", "neo4j", "openalex", "graph", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "httpx==0.27.0",
    "neo4j==5.26.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "structlog==24.4.0",
    "rich==13.9.4",
    "aiolimiter==1.2.1",
    "python-dotenv==1.0.1",
    # Week 1 Dependencies - ResearchRadar Analytics
    "fastapi==0.115.0",
    "uvicorn[standard]==0.34.0",
    "redis==5.2.1",
    "numpy==2.0.2",
    "pandas==2.2.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.7.4",
    "mypy==1.13.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-httpx==0.30.0",
    "pytest-cov==4.1.0",
    # Week 1 Testing Dependencies
    "pytest-redis==3.1.0",
    "fakeredis==2.25.1",
]

[project.scripts]
graphlit = "graphlit.__main__:run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "aiolimiter.*",
    "redis.*",
    "numpy.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/graphlit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
