[project]
name = "graphlit-expansion"
version = "1.0.0"
description = "Academic citation network expansion system using OpenAlex API and Neo4j"
readme = "README.md"
requires-python = ">=3.13"  # Upgraded for JIT compiler, no-GIL, better REPL
license = {text = "MIT"}
authors = [
    {name = "GraphLit Team"}
]
keywords = ["academic", "citation", "neo4j", "openalex", "graph", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "httpx==0.28.1",                # Latest (Dec 2025) - improved SSL config
    "neo4j==6.0.3",                 # Latest (Nov 2025) - GQL errors, better notifications
    "pydantic==2.12",               # Latest (Nov 2025) - awaiting v3
    "pydantic-settings==2.7.0",     # Latest compatible with Pydantic 2.12
    "structlog==24.4.0",            # Verified latest
    "rich==13.9.4",                 # Verified latest
    "aiolimiter==1.2.1",            # Verified latest
    "python-dotenv==1.0.1",         # Verified latest
    # Week 1 Dependencies - ResearchRadar Analytics
    "fastapi==0.127.0",             # Latest (Dec 2025) - FastAPI Cloud support
    "uvicorn[standard]==0.34.0",    # Verified latest
    "cachetools==6.2.4",            # Latest (Dec 2025) - Python 3.13 support
    "numpy==2.2.0",                 # Latest (Dec 2025)
    "pandas==2.2.3",                # Verified latest
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.10",                # Latest (Dec 2025) - 7 versions newer!
    "mypy==1.14.0",                 # Latest (Dec 2025)
    "pytest==8.3.4",                # Verified latest
    "pytest-asyncio==0.24.0",       # Verified latest
    "pytest-httpx==0.30.0",         # Verified latest
    "pytest-cov==6.0.0",            # Latest (Dec 2025)
]

[project.scripts]
graphlit = "graphlit.__main__:run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "aiolimiter.*",
    "cachetools.*",
    "numpy.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning",
]

[tool.coverage.run]
source = ["src/graphlit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
